# egg-shell

./: CMakeLists.txt  README.md
docs/: README.md
include/: commands.h  tictactoe.h  utils.h
src/: main.c
src/commands/: commands.c
src/utils/mainloop/: cleanup.c  displayPrompt.c  executeCommand.c  parseCommand.c  readCommand.c
src/utils/miscellaneous/: eggsplay.c  initialize.c  shutdown.c
